@@ -1,6 +1,6 @@
-DIST JSampler-0.8a.tar.bz2 7397290 RMD160 9ae7f24b0d6b1572aeee37a867d6f3f8e57494d7 SHA1 468b8d38ec651ec8e8797e566fa482ee469aaffd SHA256 3cc4fc3fad47382373f5d67352a4891fc025777e7e02ad7d6654d08c7d066b1d
-DIST JSampler-0.9.tar.bz2 6898691 RMD160 d812402811e70e2c6dd77e44788aaa431d38911b SHA1 72ee043b11408bae566581cf851c1960ceb50f7d SHA256 d65c2058682f4bdb8d351f9e0e2a4f3e847d6e43c8328896292f1f1047c2669c
-EBUILD jsampler-0.8a.ebuild 1096 RMD160 7e78a9440b2fd7e366efc4738c1ca69dd9f09b61 SHA1 6eb937a4bb98c1abc2abe41770f510b48c74ece9 SHA256 6df38dea0b477709ba63c26de9cebe9aed1bf2a074eb090747aa8bd37faea87c
-EBUILD jsampler-0.9.ebuild 1096 RMD160 7e78a9440b2fd7e366efc4738c1ca69dd9f09b61 SHA1 6eb937a4bb98c1abc2abe41770f510b48c74ece9 SHA256 6df38dea0b477709ba63c26de9cebe9aed1bf2a074eb090747aa8bd37faea87c
-MISC ChangeLog 372 RMD160 103462d0f63590ff5df2d0182438be3756e1b5d3 SHA1 fe22e040d7e92e3f0bdce7b032748f4e9af7d959 SHA256 bc9e2283d15c1c7968586faf267bc594dd7e14bf56903e6ea0995c30b1618a99
-MISC metadata.xml 340 RMD160 3b6356c3d18a490f4125a9de24d616931be5d9bd SHA1 1d08188e8d803991a37c9d2ba923a6779ce8b3cc SHA256 6d999e1c8a0692f1f5590f01ed1e562c37e45622ae407d881bf8fd4108448835
+DIST JSampler-0.8a.tar.bz2 7397290 SHA256 3cc4fc3fad47382373f5d67352a4891fc025777e7e02ad7d6654d08c7d066b1d
+DIST JSampler-0.9.tar.bz2 6898691 SHA256 d65c2058682f4bdb8d351f9e0e2a4f3e847d6e43c8328896292f1f1047c2669c SHA512 cbb1d476b1f3882592cc0fb7a61348802c0c399dfc3fcc35f4a8ec3396e8417754cafc3e1a14a90b0014bebd29d28b9d3771dcbb772df40d241eaadedad5299f WHIRLPOOL 959c216b314af59b28164c1f246e82fb0ffb6503c25917b74f399a63ad052f6195f7dc3683e16f5b21c16e71c01304ae654515d7b76e57e03fb8df0b49cf5b98
+EBUILD jsampler-0.8a.ebuild 1162 SHA256 3be7e22e6ffeb090040675d18e90bb76aa6abce44659280162cea7c9a463f34d SHA512 12ca23a5ce20e3191e312cd3b7a440e7eaae27eb8731dd919fc0010d4ec4837536852d382f62fa6ce7a8ca90d1bebacb97a9b1a496aa596ce4e6d50d299860d9 WHIRLPOOL 5d0a82ff229d2370a04f23e741e100dc181df6408d4d11b4cbd195b100943ce863fc2c6d8214460dc7ed0bf0db0e115a2c70dd04510cc96bd807baf383ab16a1
+EBUILD jsampler-0.9.ebuild 1162 SHA256 3be7e22e6ffeb090040675d18e90bb76aa6abce44659280162cea7c9a463f34d SHA512 12ca23a5ce20e3191e312cd3b7a440e7eaae27eb8731dd919fc0010d4ec4837536852d382f62fa6ce7a8ca90d1bebacb97a9b1a496aa596ce4e6d50d299860d9 WHIRLPOOL 5d0a82ff229d2370a04f23e741e100dc181df6408d4d11b4cbd195b100943ce863fc2c6d8214460dc7ed0bf0db0e115a2c70dd04510cc96bd807baf383ab16a1
+MISC ChangeLog 598 SHA256 d89d66ef9493f96189613c76f49b0f13220d81e97beb21ec646c8265f2795c9c SHA512 b7feb8dd683312102a00182ba5e54d768cbd6dd04f98e55df3902d106bae5a93eaad2df2cebf6c910117618f7b0fa05988286ee5cc499129c3ad41fce8b4aa0b WHIRLPOOL c0ae790d9d26cc3639e73d4e6a908cd5ff2290147f46abf76fc7b51c61145495d14a40fd4e128688aac48b12a5df54440830ec22e224b791d2e79d1f7f762678
+MISC metadata.xml 380 SHA256 3fb2e5fe7262268ba891e8c6a3d8fe7bbdf4685fe7149e9a71cb06cfa41854c2 SHA512 fc4bcc8e14976eb5a435e1278703203c3fc2f1061acc4628628a98ef28f1da9292c7e07b2ae5d79acb0a1eb3ceed7d0a95020068371cea676490a4417919ed19 WHIRLPOOL b0416d88935d231248e6170dec1f1b5b2b41f02033d11fbbf54ebb3d1685ed9cac1c03b6cc6b728b5dcb3eb1e045b942f65bef29c315bf0ec798baa0a12b9576
