@@ -1,4 +1,4 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -15,11 +15,12 @@ SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="classic"
+IUSE="classic sqlite"
 
 RESTRICT="mirror"
 
-RDEPEND="media-sound/linuxsampler
+RDEPEND="sqlite? ( media-sound/linuxsampler[sqlite] )
+	!sqlite? ( media-sound/linuxsampler )
 	>=virtual/jdk-1.6"
 DEPEND="${RDEPEND}"
 
