@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
 	<maintainer>
 		<email>proaudio@tuxfamily.org</email>
 		<name>pro-audio overlay team</name>
 	</maintainer>
 	<use>
 		<flag name="classic">Build with a standart GUI"</flag>
+		<flag name="sqlite">sqlite support via linuxsampler"</flag>
 	</use>
 </pkgmetadata>
